Fixed gallery center alignment

--- a/css/main.css
+++ b/css/main.css
@@ -324,6 +324,7 @@ margin-bottom: 55px;
 .my_work_wrapper {
   margin-top: 55px;
   width: 100%;
+  text-align: center;
 }
 
 .my_work_image {
